<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryOfUse">

    <TextView
        android:id="@+id/historyOfUseText"
        android:layout_width="403dp"
        android:layout_height="86dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:text="@string/historyOfUseText1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="172dp"
        android:layout_height="51dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="104dp"
        android:text="@string/manualHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="273dp"
        android:layout_height="55dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="40dp"
        android:text="@string/goSettingsBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="335dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="172dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/firstListEl"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:text="@string/goSettings"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/secondListEl"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:text="@string/findapp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/thirdListEl"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="@string/confirm"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="403dp"
        android:layout_height="53dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="140dp"
        android:textSize="20sp"
        android:text="@string/historyofUse2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>